2007-03-21  Nick Roberts  <nickrob@snap.net.nz>

	* xt-mouse.el (xterm-mouse-event): Compute a timestamp using
	current-time.

2007-03-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* complete.el (read-file-name-internal): Don't add the final > if the
	completion is not finished (re-application of this patch, which was
	accidentally undone by Eli).

2007-03-21  Chong Yidong  <cyd@stupidchicken.com>

	* emulation/viper.el (viper-non-hook-settings): Handle mouse
	clicks in describe-key and describe-key-briefly advice a little
	better.

2007-03-21  Juanma Barranquero  <lekktu@gmail.com>

	* server.el (server-process-filter): Cancel any pending isearch.

2007-03-21  Ulf Jasper  <ulf.jasper@web.de>

	* calendar/icalendar.el (icalendar-version): Increase to 0.15.
	(icalendar--get-unfolded-buffer): Define actual arguments rather
	than just using &rest.  Check replace-in-string is fbound.
	(icalendar-import-buffer): Doc fix.
	(icalendar--convert-ical-to-diary): Set diary-file.
	Check diary-file before inserting final newline.
	(icalendar--add-diary-entry): Return diary-file.

2007-03-21  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (diary-set-maybe-redraw): Autoload it.
	(diary-display-hook): Add custom :set function.

	* calendar/diary-lib.el (diary-header-line-flag): Doc fix.
	Add custom :set function.
	(diary-header-line-format): Doc fix.
	(diary-set-maybe-redraw): New function.
	(number-of-diary-entries): Change :set to use diary-set-maybe-redraw.
	(diary-list-entries): Always run diary-mode.

2007-03-20  David Kastrup  <dak@gnu.org>

	* files.el (magic-mode-alist): Require literal "%!PS" string for
	magic postscript file detection.

2007-03-20  Richard Stallman  <rms@gnu.org>

	* textmodes/ispell.el (ispell-call-process): New function.
	Defends against bad `default-directory.'
	(ispell-check-version, ispell-find-aspell-dictionaries)
	(ispell-get-aspell-config-value, lookup-words): Call it.
	(ispell-call-process-region): New function.